@@ -1,3 +1,8 @@
+Mon Nov 15 13:48:26 GMT 2010  Colin Watson  <cjwatson@debian.org>
+
+	* man/po4a/Makefile.am (clean-local): Remove; distclean-hook in
+	  man/Rules.man already takes care of this (thanks, Denis Barbier).
+
 Sun Nov 14 22:12:21 GMT 2010  Colin Watson  <cjwatson@debian.org>
 
 	Prevent repeated rescans when a link is broken.  Thanks to Daniel
